--- a/README
+++ b/README
@@ -16,12 +16,36 @@ This Demo is meant to show the config and planning modules. You may design a maz
     2) All walls must be vertical or horizontal (diagnal walls cause issues with configspace generation)
     3) Hippo and Hound must both be put inside the box
 To create the maze, click on the one of varying wall sizes on the right, then copy (Ctrl-C) and paste (Ctrl-V) to 
-make a copy of the desired Wall. Afterwards, use the arrows to rotate and move the wall to the desired location.
+make a copy of the desired Wall. Afterwards, use the arrows to rotate and move the wall to the desired location. Hit delete if
+you wish to remove a wall. Note that if you delete something that ur not supposed to, there is no way to undo the delete 
+(this is a WeBots issue) so you must close the the WeBots tool without saving in order to retrieve the deleted item.
 Next be sure to put hound and hippo into the maze by clicking on them and dragging them into the maze. For this demo 
 they simply act as place holders so they will no be doing anything. You may create whatever maze satisifies the three 
 constraints, but keep in mind that if the maze is unsolvable RRT will run until it hits the upper boundary on node values.
-
 Next, click File in the top left corner to open drop-down menu, select Open Text File and open the following file
 HHHDemo/controllers/hawk_config_plan/planner.py
 The file should now be open in the text editor in Webots. Interactive part is located between ###### barriers.
-Further instructions in file.
+Further instructions in file. After you have desired values, you can press play and simulation will run and print config slices
+followed by RRT plan a hound and a hippo of the provided size.
+
+NOTE: Note that resetting the simulation for the 3D world, will reset the 3D world to whatever state it was in at
+time 0. So unless you save, ur maze will be wiped upon reset. Also you should not save while the simulation is running so only
+save at time 0. Saves to planner.py work the same as any normal file saves
+
+ControlDemo
+---------------------------------------------------------------------------------------------------
+Setup identical to previous Demo except constraint 3 is changed to as follows
+        3) Only one car should be in the box and it should face north (north facing is tech issue on our side)
+The major difference, is that this demo will run the RRT for one of the cars. After building setting the maze
+Click File in the top left corner to open drop-down menu, select Open Text File and open the following file
+HHHDemo/controllers/hawk_control/planner.py
+The file should now be open in the text editor in Webots. Interactive part is located between ###### barriers.
+Further instructions in file. After you have desired values, you can press play and simulation will run and have hound and hippo
+follow a path to target goal. Note that since
+
+NOTE: Note that resetting the simulation for the 3D world, will reset the 3D world to whatever state it was in at
+time 0. So unless you save, ur maze will be wiped upon reset. Also you should not save while the simulation is running so only
+save at time 0. Saves to planner.py work the same as any normal file saves
+
+Top-Level-1,2,3Demo
+---------------------------------------------------------------------------------------------------
